[3.1.x] Fixed #31901 -- Prevented content overflowing in the admin changelist with navigation sidebar.
Backport of 2bc38bc7cae002f949157d95e3f0c19ea6b8ca5c from master

--- a/django/contrib/admin/static/admin/css/changelists.css
+++ b/django/contrib/admin/static/admin/css/changelists.css
@@ -90,6 +90,7 @@
     margin: 0;
     vertical-align: top;
     font-size: 13px;
+    max-width: 230px;
 }
 
 #changelist #toolbar form #searchbar:focus {
